Switch to String instead of Path
Needed in order to make the SSL certificates API do the right thing